--- a/portal/css/main.css
+++ b/portal/css/main.css
@@ -6,8 +6,7 @@
 
 header.headerfix .header_top,
 .headerfix .header_bottom {
-    background-color: transparent;
-    backdrop-filter: none;
+    background-color: rgba(255, 255, 255, .6);
 }
 
 .swiper-container {
@@ -698,6 +697,8 @@ header.headerfix .header_top,
 
 /* section04 */
 .sec4 {
+    padding: 40px 0;
+    box-sizing: border-box;
     background-color: #e8eff6;
 }
 .sec4 .inner {
@@ -910,6 +911,10 @@ header.headerfix .header_top,
 }
 
 /* section5 */
+.sec5 {
+    padding: 40px 0;
+    box-sizing: border-box;
+}
 .sec5 .inner {
     display: flex;
     flex-direction: column;
