--- a/portal/css/common.css
+++ b/portal/css/common.css
@@ -134,6 +134,13 @@
     display: flex;
     gap: 10px;
 }
+.btn_box_group.type_01 {
+    justify-content: center;
+    padding: 50px 0 0;
+}
+.btn_box_group.type_01 .btn_box {
+    flex: none;
+}
 .btn_box {
     display: flex;
     width: 160px;
@@ -295,7 +302,8 @@
     border: 1px solid #e6e6e6; 
     font-size: var(--font-common);
 }
-.inp_box input::placeholder {
+.inp_box input::placeholder,
+.textarea_box textarea::placeholder {
     font-weight: 200;
     color: #ccc;
 }
@@ -724,6 +732,90 @@
 }
 .inp_group.company_num .inp_group .inp_box:nth-child(3) {
     flex: 2;
+}
+.image_file_box ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.image_file_box ul li {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: calc(33.33% - 10px);
+    background-color: #ddd;
+    padding: 15px;
+    box-sizing: border-box;
+    border-radius: 10px;
+}
+.image_file_box ul li .num {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    background-color: #fff;
+    border-radius: 50%;
+    box-shadow: 0px 1px 6px 1px rgb(0 0 0 / 13%);
+}
+.image_file_box ul li .img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 150px;
+    background-color: #fff;
+    margin-top: 10px;
+}
+.image_file_box ul li .file {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    gap: 10px;
+    margin-top: 10px;
+}
+.image_file_box ul li .file input {
+    position: absolute;
+    left: -9999px;
+}
+.image_file_box ul li .file label {
+    flex: 1;
+    padding: 10px 0;
+    border-radius: 10px;
+    background-color: #303f9f;
+    text-align: center;
+    font-size: 15px;
+    font-weight: 400;
+    color: #fff;
+    cursor: pointer;
+}
+.image_file_box ul li .file button {
+    flex: 1;
+    padding: 10px 0;
+    border-radius: 10px;
+    background-color: #666;
+    font-size: 15px;
+    font-weight: 400;
+    color: #fff;
+    cursor: pointer;
+}
+.image_num {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+.image_num .num {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    background-color: #fff;
+    border-radius: 50%;
+    box-shadow: 0px 1px 6px 1px rgb(0 0 0 / 13%);
+}
+.image_num .inp_group {
+    width: calc(100% - 50px);
 }
 
 /* 테이블 그룹 */
@@ -2287,6 +2379,9 @@ a.ui-button:active,
     .btn_box {
         width: 100%;
     }
+    .btn_box_group.type_01 .btn_box {
+        flex: 1;
+    }
     
     /* 제목 */
     .tit_box h3 {
@@ -2354,6 +2449,7 @@ a.ui-button:active,
     }
     .inp_group.file .file_box {
         width: 100%;
+        align-items: baseline;
     }
     .inp_group.file .file_value {
         flex-wrap: wrap;
@@ -2362,6 +2458,13 @@ a.ui-button:active,
     }
     .inp_group.file .file_value span {
         font-size: 14px;
+    }
+    .image_file_box ul {
+        flex-direction: column;
+        gap: 10px;
+    }
+    .image_file_box ul li {
+        width: 100%;
     }
 
     /* 테이블 */
