--- a/portal/css/common.css
+++ b/portal/css/common.css
@@ -177,6 +177,11 @@
 .btn_box .btn_gray {
     background-color: #666;
 }
+.btn_box .btn_white {
+    background-color: #fff;
+    border: 1px solid #d6d6d6;
+    color: #333;
+}
 .btn_box .shadow {
     box-shadow: 0px 2px 4px 1px rgb(0 0 0 / 30%);
 }
